--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,8 @@
 <h1>
   List of articles
 </h1>
+
+<%=link_to 'create new article', new_article_path %>
 <table>
   <tr>
     <th>Ttiel</th>
@@ -14,6 +16,8 @@
      <td> <%= article.description %></td> 
      <td><%= link_to "Edit", edit_article_path(article)%></td>
      <td><%= link_to "Show", article_path(article)%></td>
+     <td><%= link_to "Delete", article_path(article), method: :delete, data:{confirm: "are you sure?"}%></td>
+
     </tr>
 <% end %>
   
