--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,4 @@
   welcome to our home page
 </h1>
 
-<%= link_to 'About', about_path %>
+<%= link_to 'About', about_path %> || <%=link_to 'Articles List', articles_path %>
