create home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,13 @@ th, td {
   <% flash.each do |namme, msg| %>
     <%=msg%>
   <% end %>
-<%= yield %>
+  
+<%= render 'layouts/navigation'%>
+<div class="container">
+   <%= yield %>
+  </div>
+  <%=render 'layouts/footer' %>
+
 
 </body>
 </html>
