--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
-<h1>
-  welcome to our home page
-</h1>
+<div class="center jumbotron">
+  <h1>Welcome to Alpha Blog</h1>
+  <p>...</p>
+  
+  <%=link_to "Sign up now","#", class:"btn btn-danger btn-lg btn-xlarge", role: "button" %>
+</div>
 
-<%= link_to 'About', about_path %> || <%=link_to 'Articles List', articles_path %>
