--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,72 @@
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.navbar-default {
+    background-color: #000000;
+    border-color: #E7E7E7;
+}
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+  
+}
+
+.center {
+  text-align:center;
+}
+
+.jumbotron {
+  background-image : asset-url('Oli-Blog-2.jpg');
+  background-size: cover;
+  height: 550px
+}
+
+.jumbotron h1 {
+  color: #fff;
+  text-aling: center;
+  margin-top: 1px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.btn-xlarge {
+ font-size: 1.7em;
+ background-color: black; 
+}
+
+footer {
+  margin-top: 35px;
+  padding-top: 5px;
+  border-top: 2px solid #eaeaea;
+  color: #777;
+}
+
+footer a:hover {
+  color: #222;
+}
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer li {
+  float: left;
+  margin-legt: 15px
+  
+  
+}
