add styling to show template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,13 @@ footer ul {
 footer li {
   float: left;
   margin-legt: 15px
-  
-  
+}
+
+.articles-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.descrip{
+  margin-top: 0;
 }
