--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,16 @@
-<p>
-  title <%= @article.title%> <br>
-  description <%= @article.description %>
-</p>
 
-<%=link_to 'Articles List', articles_path %>
+<h2 align="center"> Title <%= @article.title%></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center"> <strong>Description</strong></h4> 
+  <hr> 
+   <%= simple_format(@article.description) %>
+  <div class="articles-actions">
+    <%=link_to 'Articles List', articles_path, class:"btn btn-xs btn-primary" %>    
+    <%=link_to 'Edit Article',  edit_article_path(@article), class:"btn btn-xs btn-success" %>    
+    <%=link_to 'Delete Article', article_path(@article), method: :delete, data:{confirm: "Are you sure"}, 
+                                                         class:"btn btn-xs btn-danger"%>    
+
+  </div>
+
+  
+ </div>
