--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -87,3 +87,10 @@ footer li {
 .descrip{
   margin-top: 0;
 }
+
+.article-meta-info{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+  font-style: italic
+  
+}
