--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,8 +8,17 @@
                 <%= link_to article.title, article_path(article) %> 
          </div>
          <div class="article-body">
-                <%= article.description %>
+                <%= article.description %> 
+               <div class="article-meta-info">
+                  <small>Created by  <%= article.user.username if article.user %>,
+                  <%= time_ago_in_words(article.created_at) %> ago,
+                  last update : <%=time_ago_in_words(article.updated_at)%> ago
+           
+                   </small>
+                </div>
+               
          </div>
+          
          
          <div class="articles-actions">
             <%=link_to 'Edit Article',  edit_article_path(article), class:"btn btn-xs btn-success" %>    
