--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,9 @@
 <h1 align="center">List of articles </h1>
 
-
+<div align="center">
+   <%= will_paginate %>
+</div>
 <%= render 'articlesList', obj: @articles %>
+<div align="center">
+   <%= will_paginate %>
+</div>
