--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,15 @@
   
 </div>
 
+<div align="center">
+   <%= will_paginate @user_articles %>
+  
+</div>
 <h4 align="center"><%=@user.username%>’s articles</h4>
 
 <%= render 'articles/articlesList', obj: @user.articles %>
+
+<div align="center">
+   <%= will_paginate @user_articles %>
+  
+</div>
