--- a/app/views/articles/_articlesList.html.erb
+++ b/app/views/articles/_articlesList.html.erb
@@ -18,12 +18,13 @@
                
          </div>
           
-         
-         <div class="articles-actions">
-            <%=link_to 'Edit Article',  edit_article_path(article), class:"btn btn-xs btn-success" %>    
-            <%=link_to 'Delete Article', article_path(article), method: :delete, data:{confirm: "Are you sure"}, 
-                                                                 class:"btn btn-xs btn-danger"%>    
-         </div>
+         <%if loggedin? && current_user == article.user %>
+           <div class="articles-actions">
+              <%=link_to 'Edit Article',  edit_article_path(article), class:"btn btn-xs btn-success" %>    
+              <%=link_to 'Delete Article', article_path(article), method: :delete, data:{confirm: "Are you sure"}, 
+                                                                   class:"btn btn-xs btn-danger"%>    
+           </div>
+         <%end%>
        </div>
       </div> 
  </div>
