--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,13 +16,16 @@
   <hr> 
    <%= simple_format(@article.description) %>
   
-  <div class="articles-actions">
-    <%=link_to 'Articles List', articles_path, class:"btn btn-xs btn-primary" %>    
-    <%=link_to 'Edit Article',  edit_article_path(@article), class:"btn btn-xs btn-success" %>    
-    <%=link_to 'Delete Article', article_path(@article), method: :delete, data:{confirm: "Are you sure"}, 
-                                                         class:"btn btn-xs btn-danger"%>    
+    <%if loggedin? && current_user == @article.user %>
+
+      <div class="articles-actions">
+        <%=link_to 'Articles List', articles_path, class:"btn btn-xs btn-primary" %>    
+        <%=link_to 'Edit Article',  edit_article_path(@article), class:"btn btn-xs btn-success" %>    
+        <%=link_to 'Delete Article', article_path(@article), method: :delete, data:{confirm: "Are you sure"}, 
+                                                             class:"btn btn-xs btn-danger"%>    
 
   </div>
+  <%end%>
 
   
  </div>
