--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,19 +16,21 @@
       <ul class="nav navbar-nav">
        <!-- <li><a href="#">Articles <span class="sr-only">(current)</span></a></li>-->
         <li> <a <%=link_to "Articles", articles_path %> <span <span class="sr-only">(current)</span></a> </li>
-        <li><a href="#">Logout</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%=link_to "Add Article",new_article_path%></li>
-            <li><a href="#">Another actio</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <li><%= link_to "Users", users_path%></li>
+        <%if loggedin?%>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%=link_to "Add Article",new_article_path%></li>
+              <li><a href="#">Another actio</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        <%end%>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -41,10 +43,10 @@
     <%if loggedin? %>
           <li><%= link_to "Logout", logout_path, method: :delete%></a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile  <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
+              <li><a href="#"><%=link_to "Edit Profile", edit_user_path(current_user) %></a></li>
+              <li><%=link_to "View Profile", user_path(current_user) %></a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Separated link</a></li>
