--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,8 @@
   <h1>Welcome to Alpha Blog</h1>
   <p>...</p>
   
-  <%=link_to "Sign up now","#", class:"btn btn-danger btn-lg btn-xlarge", role: "button" %>
+  <% if !loggedin?%>
+     <%=link_to "Sign up now",signup_path , class:"btn btn-danger btn-lg btn-xlarge", role: "button" %>
+  <%end%>
 </div>
 
