--- a/app/views/articles/_articlesList.html.erb
+++ b/app/views/articles/_articlesList.html.erb
@@ -18,7 +18,7 @@
                
          </div>
           
-         <%if loggedin? && current_user == article.user %>
+         <%if loggedin? && (current_user == article.user || current_user.admin?) %>
            <div class="articles-actions">
               <%=link_to 'Edit Article',  edit_article_path(article), class:"btn btn-xs btn-success" %>    
               <%=link_to 'Delete Article', article_path(article), method: :delete, data:{confirm: "Are you sure"}, 
