--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -45,7 +45,8 @@
     <%if loggedin? %>
           <li><%= link_to "Logout", logout_path, method: :delete%></a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile  <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Your Profile <%="Admin" if current_user.admin? %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#"><%=link_to "Edit Profile", edit_user_path(current_user) %></a></li>
               <li><%=link_to "View Profile", user_path(current_user) %></a></li>
