--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
              <li>  <%=link_to gravatar_for(user), user_path(user) %></li> 
               <li class="article-title">   <%=link_to user.username, user_path(user) %> </li>
               <li><small><%= pluralize(user.articles.count, "article") if user.articles%></small></li>
-              <% if (current_user.admin?) %>
+              <% if (current_user && current_user.admin?) %>
                  <%=link_to 'Delete User', user_path(user), method: :delete, data:{confirm: "Are you sure"}, 
                                                                      class:"btn btn-xs btn-danger"%>   
               <%end%>
